--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             if(i < 14.0 ) color = vec3(204, 128, 0) / float(255); else
             if(i < 15.0 ) color = vec3(153, 87, 0) / float(255); else
             if(i < 16.0 ) color = vec3(106, 52, 3) / float(255); 
-            if (q == 1.0) color = vec3(0,0,0);
+            if (q >= 0.99) color = vec3(0,0,0);
 
             gl_FragColor = vec4(color, 1.0);
           } else {
@@ -99,7 +99,7 @@
     </canvas>
     <div class="input">
       <label><h4 id="num-iterations">700 iterations</h4><br>
-        <input type="range" id="iterations" min="1" max="2000" defaultValue="700">
+        <input type="range" id="iterations" min="1" max="3000" defaultValue="700">
         <h4>Coloring scheme</h4><div class="box">
         <label><input type="radio" name="color" checked>Green</label><br>
         <label><input type="radio" name="color">Wikipedia</label><br>
